# mate-backgrounds

./: .build.yml  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  makepot  mate-backgrounds.pot  meson.build
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config
abstract/: Makefile.am  mate-abstract.xml.in.in  meson.build
desktop/: Makefile.am  mate-desktop.xml.in.in  meson.build
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
nature/: Makefile.am  mate-nature.xml.in.in  meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_CO.po  es_ES.po  es_MX.po  es_PR.po  es_US.po  (+90 more)
