AC_INIT([mate-backgrounds],
	[1.24.0],
	[http://www.mate-desktop.org])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-xz tar-ustar check-news])

AM_GNU_GETTEXT_VERSION([0.19.8])
AM_PO_SUBDIRS

AM_MAINTAINER_MODE

AC_OUTPUT([
Makefile
abstract/Makefile
desktop/Makefile
nature/Makefile
po/Makefile.in
])
